<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragmentContainer"
        android:layout_alignParentBottom="true"/>


    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fusca"
                android:layout_weight="1"
                android:onClick="bannerFusca"/>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ferrari"
                android:layout_weight="1"
                android:onClick="bannerFerrari"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tesla"
                android:layout_weight="1"
                android:onClick="bannerTesla"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/carro4"
                android:layout_weight="1"
                android:onClick="bannervvvvv"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>





