<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#020202"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/q_eor_23"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_0000"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cambio_00000000"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/combustivel_000000000"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        />
</LinearLayout>

