<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#1056e1"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tesla_model_x"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_2017"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cambio_automatico"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/combustivel_gasolina_e_eletrico"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        />
</LinearLayout>

